# zeta_markets_bot_v1

./: .gitignore  pyproject.toml  requirements.txt
src/discord_bot/: .env  bot.py  tempCodeRunnerFile.py
zeta_discord_bot/discord_bot/: bot.py
zeta_discord_bot/zeta_commands/: __init__.py  commands.py  main.py  tempCodeRunnerFile.py
zeta_discord_bot/zeta_commands/utils/: __init__.py  keypair.py  publickey.py
